--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Conways Game of life</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="A simple conways game of life website made using svelte">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
