--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<title>Conways Game of life</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<meta name="robots" content="all">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="description" content="A simple conways game of life website made using svelte">
 		%sveltekit.head%
